# smol-ft

./: main.py  pyproject.toml
src/: 01_chat_templates.ipynb  02_dataset_processing.ipynb  03_fine_tuning.ipynb
